changed scrollbar and fixed min-vh bug

--- a/src/index.css
+++ b/src/index.css
@@ -107,3 +107,12 @@ body {
 code {
   font-family: 'Montserrat', 'sans-serif';
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #424242;
+}
